Zapewniono kompatybilność z Java 10